--- a/shesha-functional-tests/backend/src/Boxfusion.SheshaFunctionalTests.Web.Host/wwwroot/swagger/ui/index.html
+++ b/shesha-functional-tests/backend/src/Boxfusion.SheshaFunctionalTests.Web.Host/wwwroot/swagger/ui/index.html
@@ -112,9 +112,10 @@
                                         onClick: function () {
                                             var authorizeButton = document.getElementById('authorize');
                                             if (abp.auth.getToken()) {
-                                                abp.swagger.logout();
-                                                authorizeButton.innerText = getAuthorizeButtonText();
-                                                authorizeButton.className = 'btn ' + getAuthorizeButtonCssClass();
+                                                abp.swagger.logout(function () {
+                                                    authorizeButton.innerText = getAuthorizeButtonText();
+                                                    authorizeButton.className = 'btn ' + getAuthorizeButtonCssClass();
+                                                });                                                
                                             } else {
                                                 abp.swagger.openAuthDialog(function () {
                                                     authorizeButton.innerText = getAuthorizeButtonText();
